fixed overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,6 +153,6 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #f0e5e3;
 }
